--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,22 @@
+/*sirve para tener limpio el diseño*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /*encabezado*/
 header{
  background-color: #901501;
  display: block;
- width: auto;
+ width: 100%;
  border: 2px solid #BD8C00 ;
  font-family: "Dancing Script", cursive;
  font-weight: 700;
- 
+ padding-top: 8px;
+}
+nav{
+    width: 100%;
+    height: 80px;
 }
 .lista{
     color: white;
@@ -14,11 +24,6 @@ header{
     margin-left: 13px;
     display: inline;
     margin-right: 15px;
-}
-.encabezado{
-    font-size:13px;
-    color:white;
-    margin-left: 10px;
 }
 
 /*pie de pagina*/
@@ -28,19 +33,44 @@ footer{
 }
 
 /*cuerpo de pagina*/
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+    font-family: "ancizar_serif";
+    src: url(../fonts/Ancizar_Serif/AncizarSerif-Italic-VariableFont_wght.ttf);
+}
 body{
- background-color: antiquewhite;
+    
+    background-color: white;
 }
 p{
-    color:black;
-    
+    color:red;
+    font-family: "ancizar_serif";
+}
+
+/*carrusel*/
+.carrusel{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    overflow-x: auto;
+    margin: 60px auto;
+    width: 90%;
+}
+.carrusel img{
+    flex: 0 0 auto;
+    scroll-snap-align: center;
+    width: 230px;
+    height: 345px;
+    border-radius: 10px;
+    margin-top: 5%;
 }
 /*enlaces*/
-a{
-    
+.head{
+    font-size: 43px;
     color: white;
-    
+    text-align: center;
+    padding-left: 4%;
+    padding-right: 2%;
+    padding-bottom: 1%;
 }
 a:hover{
     color:#BD8C00;
